--- a/ruby-china-swift/Base.lproj/Main.storyboard
+++ b/ruby-china-swift/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="fF0-lB-Lbf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="fF0-lB-Lbf">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -51,7 +51,7 @@
             </objects>
             <point key="canvasLocation" x="1042" y="-250"/>
         </scene>
-        <!--我的-->
+        <!--My Controller-->
         <scene sceneID="LFp-54-IXX">
             <objects>
                 <viewController id="YuV-fl-I8K" customClass="MyController" customModule="ruby_china_swift" customModuleProvider="target" sceneMemberID="viewController">
@@ -64,23 +64,23 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="nAv-ou-O6a">
-                                <rect key="frame" x="0.0" y="20" width="320" height="499"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="nAv-ou-O6a" firstAttribute="leading" secondItem="PjZ-7O-jZd" secondAttribute="leadingMargin" constant="-20" id="0QH-yc-EjS"/>
-                            <constraint firstItem="nAv-ou-O6a" firstAttribute="top" secondItem="PjZ-7O-jZd" secondAttribute="topMargin" constant="20" id="6im-NA-B2O"/>
+                            <constraint firstItem="nAv-ou-O6a" firstAttribute="top" secondItem="PjZ-7O-jZd" secondAttribute="topMargin" id="6im-NA-B2O"/>
                             <constraint firstAttribute="trailingMargin" secondItem="nAv-ou-O6a" secondAttribute="trailing" constant="-20" id="Xye-ez-Mex"/>
                             <constraint firstItem="WeC-kQ-jfC" firstAttribute="top" secondItem="nAv-ou-O6a" secondAttribute="bottom" id="dQm-64-lMG"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="我的" image="ic_tab_my" id="x1o-oI-L5R"/>
+                    <navigationItem key="navigationItem" id="YRr-W2-k7w"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CQL-FM-O7Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1834" y="-1218"/>
+            <point key="canvasLocation" x="2366" y="-1218"/>
         </scene>
         <!--Topics Controller-->
         <scene sceneID="XdM-c8-Zlk">
@@ -182,7 +182,7 @@
                     <connections>
                         <segue destination="1qU-YU-e11" kind="relationship" relationship="viewControllers" id="eqT-tb-WhV"/>
                         <segue destination="8l9-b1-Fen" kind="relationship" relationship="viewControllers" id="A1O-Dl-6nh"/>
-                        <segue destination="YuV-fl-I8K" kind="relationship" relationship="viewControllers" id="r8N-ql-hQE"/>
+                        <segue destination="7Fe-oL-BQF" kind="relationship" relationship="viewControllers" id="r8N-ql-hQE"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TmH-m2-MPB" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -226,6 +226,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XLi-71-sxj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1424" y="-2022"/>
+        </scene>
+        <!--我的-->
+        <scene sceneID="QK1-fe-vFd">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="7Fe-oL-BQF" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="我的" image="ic_tab_my" id="x1o-oI-L5R"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ebc-7f-ew8">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="YuV-fl-I8K" kind="relationship" relationship="rootViewController" id="at8-lG-VOo"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jYu-zo-1rR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1834" y="-1218"/>
         </scene>
     </scenes>
     <resources>
