--- a/ruby-china-swift/Base.lproj/Main.storyboard
+++ b/ruby-china-swift/Base.lproj/Main.storyboard
@@ -17,35 +17,9 @@
                     <view key="view" contentMode="scaleToFill" id="WZF-WW-Ija">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleAspectFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SxF-aZ-oxF">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="3gR-ub-jek">
-                                        <rect key="frame" x="0.0" y="92" width="320" height="100"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3gR-ub-jek" id="Tgv-DD-zID">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="99.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                                <sections/>
-                            </tableView>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="SxF-aZ-oxF" secondAttribute="trailing" constant="-20" id="6pk-Ne-02Q"/>
-                            <constraint firstItem="SxF-aZ-oxF" firstAttribute="leading" secondItem="WZF-WW-Ija" secondAttribute="leadingMargin" constant="-20" id="a0O-f4-t3Y"/>
-                            <constraint firstItem="3x1-44-kq3" firstAttribute="top" secondItem="SxF-aZ-oxF" secondAttribute="bottom" id="emF-fk-8Q8"/>
-                            <constraint firstItem="SxF-aZ-oxF" firstAttribute="top" secondItem="WZF-WW-Ija" secondAttribute="topMargin" id="fMG-Jh-YWS"/>
-                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="v7N-hb-FcB"/>
-                    <connections>
-                        <outlet property="tableView" destination="SxF-aZ-oxF" id="l4X-2X-9TO"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Nff-Vt-zQ5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -65,7 +39,7 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="nAv-ou-O6a">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -93,34 +67,9 @@
                     <view key="view" contentMode="scaleToFill" id="Qqp-Mb-shs">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="55" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="oRf-dh-0nT" customClass="Top">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="1Vc-ii-4sY">
-                                        <rect key="frame" x="0.0" y="92" width="320" height="55"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1Vc-ii-4sY" id="EOE-Az-TuF">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="54.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="4qA-BE-oia" firstAttribute="top" secondItem="oRf-dh-0nT" secondAttribute="bottom" id="K8X-4Z-NxT"/>
-                            <constraint firstItem="oRf-dh-0nT" firstAttribute="top" secondItem="Qqp-Mb-shs" secondAttribute="topMargin" id="dqm-7n-dci"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="oRf-dh-0nT" secondAttribute="trailing" constant="-20" id="mxL-6F-D50"/>
-                            <constraint firstItem="oRf-dh-0nT" firstAttribute="leading" secondItem="Qqp-Mb-shs" secondAttribute="leadingMargin" constant="-20" id="sou-Zy-KJ9"/>
-                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="uyw-aH-uDe"/>
-                    <connections>
-                        <outlet property="tableView" destination="oRf-dh-0nT" id="UUc-xB-yk6"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k5o-mI-26m" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
